--- a/HTBCH/(public)/index.html
+++ b/HTBCH/(public)/index.html
@@ -3,30 +3,39 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./styles/style.css">
+<link rel="stylesheet" href="/(public)/styles/form.css">
+<link href="https://fonts.googleapis.com/css2?family=Recursive:wght@800&display=swap" rel="stylesheet">
 <title>How to Build Credit History</title>
 </head>
 <body>
-
-<h2>How to Build Credit History</h2>
-<p>Click on the button at the bottom of this page to open form.</p>
-<p>Note that the button and the form is fixed - they will always be positioned to the bottom of the browser window.</p>
-
-<button class="open-button" onclick="openForm()">BUILD CREDIT</button>
-
-<div class="form-popup" id="myForm">
-  <form action="/action_page.php" class="form-container">
-    <h1>Login</h1>
-
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-
-    <button type="submit" class="btn">Login</button>
-    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-  </form>
-</div>
+    <div class="siteWrapper"> 
+        <a><img class="logo" src="/styles/cropped_letters.png"> </a>
+        <div class="form-container">
+            <h2 class="question">What type of loan do you need?</h2>
+            <div class="form-body">
+                <div class="range-wrap">
+                    <label for="">$1,000+</label>
+                    <input type="range" class="range" min="1000" max="20000" step="1">
+                    <output class="bubble"></output>
+                </div>
+                <div class="dropdown-container">
+                    <label for="select">loan purpose</label>
+                    <select class="dropdown">
+                        <option>-select-</option>
+                        <option>Building Credit History</option>
+                        <option>Saving Money</option>
+                        <option>Getting Larger Loans</option>
+                    </select>
+                </div>    
+                <input type="hidden" name="_next" value="">
+            </div>
+            <a href="/step2.html" class="next button">Next &raquo;</a>
+        </div>
+    </div>
+    <footer>
+        <a href="/privacy-policy.html"></a>
+    </footer>
 </body>
 <script src="./scripts/main.js"></script>
+<script src="/wip/form.js"></script>
 </html>
