update social media linkt with tracking

--- a/GXP/public/follow.html
+++ b/GXP/public/follow.html
@@ -9,9 +9,9 @@
 <body>
     <h1 class="title">Follow Ground Xero Photography</h1>
     <div class="row">
-        <a href="https://twitter.com/GXPhotography20">Twitter </a> 
-        <a href="https://www.instagram.com/GroundXeroPhotography/"> Instagram </a>
-        <a href="https://www.facebook.com/GroundXeroPhotography/"> Facebook </a>
+        <a href="http://bit.ly/GXP-Twitter">Twitter </a> 
+        <a href="http://bit.ly/GXP-Insta"> Instagram </a>
+        <a href="http://bit.ly/GXP-Facebook"> Facebook </a>
       </div> 
 </body>
 </html>
