--- a/GXP/public/index.html
+++ b/GXP/public/index.html
@@ -17,6 +17,19 @@
   <title>Ground Xero Photography</title>
 </head>
 <body>
-  <h2>What up doe?</h2>
+  <header>
+    <div class="container">
+        <div class="header-bar">
+            <a href="index.html"><strong> Ground Xero </strong> Photography </a>
+            <span class="nav">
+                <a href="#" target="_blank"> About </a>
+                <a href="#" target="_blank"> Gallery </a>
+                <a href="follow.html"> Contact </a>
+            </span>
+        </div>
+    </div>
+</header>
+<div class="main"></div>
+  <h2>Coming Soon</h2>
 </body>
 </html>
