updated styling of consult page

--- a/GXP/public/consult.html
+++ b/GXP/public/consult.html
@@ -30,6 +30,7 @@
     </div>
 </header>
 <div class="main">
+  <h2 class="heading">Book a Call Today!</h2>
 <!-- Calendly inline widget begin -->
 <div class="calendly-inline-widget" data-url="https://calendly.com/gxp/15min?background_color=000000&text_color=ffffff"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
